--- a/css/style.css
+++ b/css/style.css
@@ -253,6 +253,21 @@ nav{
     z-index:20!important;
     
   }
+  .parallax{
+    position:relative;
+     background: url("../images/sea-sky-horizon.jpg") no-repeat center center;
+     background:url(" https://media.giphy.com/media/7GHRDluBmx9O8/giphy.gif") no-repeat center center fixed;
+     background:url("http://media.giphy.com/media/Cf4qsIEIrFs6Q/giphy.gif") no-repeat center center fixed;
+     background-attachment: scroll !important;
+     -webkit-background-size: cover;
+     -moz-background-size: cover;
+    -o-background-size: cover;
+     background-size: cover!important;
+     height: 50vw;
+     width: 100%;
+  }
+
+
 /* // Extra small devices (portrait phones, less than 576px) */
 /* // No media query for `xs` since this is the default in Bootstrap */
 
@@ -479,6 +494,9 @@ h6{
 .display-3{
     font-size:2.3em!important;
 }
+
+
+
 
 
 
@@ -856,11 +874,12 @@ h6{
     .trait{
     background-color: var(--main-color);
     height: 20px;
-    width: 50%;
+    width: 25%;
     }
     .title-part-1{
     margin-left:-3.5% !important;
     }
+    .parallax{  background-attachment: fixed !important;}
 }
 
 /* // Extra large devices (large desktops, 1200px and up) */
@@ -947,7 +966,7 @@ h6{
     }
     .trait{
         height: 21px;
-        width: 45%;
+        width: 25%;
     }
 
 
@@ -1139,16 +1158,4 @@ textarea {
   
  
 
-  .parallax {
-    position:relative;
-     background: url("../images/sea-sky-horizon.jpg") no-repeat center center;
-     background:url(" https://media.giphy.com/media/7GHRDluBmx9O8/giphy.gif") no-repeat center center fixed;
-     background:url("http://media.giphy.com/media/Cf4qsIEIrFs6Q/giphy.gif") no-repeat center center fixed;
-     background-attachment: fixed !important;
-     -webkit-background-size: cover;
-     -moz-background-size: cover;
-    -o-background-size: cover;
-     background-size: cover!important;
-     height: 40vh;
-     width: 100%;
-  }
+ 
