--- a/css/style.css
+++ b/css/style.css
@@ -56,15 +56,9 @@ html, body, header, .view {height: 100%;}
 .top-nav-collapse{background-color:var(--main-color-02);}
 
 
-@media only screen and (max-width: 768px) {
-  
-      .navbar {background-color:var(--main-color-02);
-
-
-    }
-  }
-
-
+  #content:after{
+    content:"Mobile Very Small Screen"
+   }
 
   
 
@@ -499,9 +493,18 @@ h6{
 
 
 
+@media only screen and (max-width: 992px) {
+  .navbar {background-color:var(--main-color-02);
+}
+}
 
 /* // Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) {
+
+  
+  #content:after{
+    content:"Mobile Small Screen"
+   }
  
     .logo-jg {
         z-index:1000;
@@ -619,7 +622,9 @@ h6{
 
 /* // Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) {
-  
+  #content:after{
+    content:"Tablet Screen"
+   }
  
     .logo-jg {
         z-index:1000;
@@ -782,7 +787,9 @@ h6{
 /* // Large devices (desktops, 992px and up) */
 @media (min-width: 992px) {
 
- 
+ #content:after{
+  content:"Desktop Large Screen"
+ }
     
  
 
@@ -886,7 +893,9 @@ h6{
 @media (min-width: 1200px) {   
 
 
-
+  #content:after{
+    content:"Desktop Very Large Screen"
+   }
 
 
 
