--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ body{
 html {
 	height: 100% !important;
     width: 100%;  
+    overflow-x:hidden !important;
 }
 
 html, body, header, .view {height: 100%;}
@@ -142,7 +143,7 @@ nav{
     /*background-color: white;*/
 
     border: none;
-    position: absolute;
+    position: relative;
     /*overflow: hidden;*/
     width: 100%;
     height: 100vh;
@@ -150,20 +151,11 @@ nav{
     left: 50%;
     transform: translate(-50%, -50%);
     backface-visibility: hidden;
-  
- 
+
   }
 
-
-  
-
-
-
   .parallax-wrapper {
-  
     position: absolute;
-
-
     width: 100%;
     height: 100%;
     top:50%;
@@ -172,6 +164,8 @@ nav{
     transform: translate3d(0px, 0px, 0px);
     transform-style: preserve-3d;
     backface-visibility: hidden;
+
+  
   }
   
   
@@ -183,6 +177,7 @@ nav{
     display: block!important;  
 
     /*transition: transform .1s linear;*/
+    
   }
  
   .parallax-layer.is-out {
@@ -259,6 +254,7 @@ nav{
      background-size: cover!important;
      height: 50vw;
      width: 100%;
+     overflow:hidden;
   }
 
 
@@ -277,11 +273,12 @@ nav{
     background-size: contain !important;
     z-index: 1000!important;
     opacity:0.8;
+    overflow:hidden;
 }
 
 .under-logo  {
     z-index:250;
- 
+    margin:0 0!important;
     background: url('../images/white-sunlight992.png') no-repeat center !important;
     background-repeat: no-repeat;
     bottom: 0%;
@@ -290,7 +287,8 @@ nav{
     height: 70%;
   
     background-size: cover;
-    opacity:0.7;
+    opacity:1;
+    overflow:hidden;
    
 }
 
@@ -935,16 +933,19 @@ h6{
 
     .under-logo {
     
-      left:50%;
+  
+  
     
       width:100%;
-      transform: translateX(-50%);
+    
      
-      height:40vw!important;
+      height:100vh!important;
       z-index:8000 !important;
       
       border:0px solid goldenrod;
-      opacity:0.3;
+      opacity:0.4;
+  
+
     }
 
 
@@ -1005,9 +1006,9 @@ h6{
         margin-top:-8vh;
       }
 
-      #top_apropos{
+    /*   #top_apropos{
           padding-top:50%!important;
-      }
+      }  */
 
 
 
