--- a/css/style.css
+++ b/css/style.css
@@ -306,11 +306,11 @@ nav{
   
 .phrase {
     position:absolute;
-    padding-top:10vh;
+  
     left: 0 !important;
      right:0 !important; 
     z-index:4000;
-    padding-top:4.5vh;
+    padding-top:15vh;
     font-size: 12.5vw;
     font-weight: 100;
     letter-spacing: 0.5vw;
@@ -322,10 +322,11 @@ nav{
 .logo-jg {
     z-index:1000;
     position:absolute;
+    top:0;
     left:0;
     right:0;
     width:100%;
-    height:100vh;
+    height:101vh;
 
  
   background: url('../images/cosmo_pyramids576.jpg') no-repeat top ;
@@ -335,12 +336,13 @@ nav{
 }
 
 #logo-jg {
-   margin-top:20%;
+   margin-top:40%;
   width: 50%!important;
   height: 50%!important;
 
 
 }
+
 
 
 
